--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
+  "name": "willreidy2016",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "doc": "doc"
+  },
+  "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-sass": "latest",
-    "grunt-autoprefixer": "latest",
-    "grunt-contrib-watch": "latest",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-uglify": "latest"
-  }
-
+    "browser-sync": "^2.17.5",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chrisonside/english-tutor-london.git"
+  },
+  "author": "Chris Reidy",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/chrisonside/english-tutor-london/issues"
+  },
+  "homepage": "https://github.com/chrisonside/english-tutor-london#readme"
 }
